feat: refactor Docker setup and update API endpoint configurations

--- a/GCE/docker/Dockerfile.backend
+++ b/GCE/docker/Dockerfile.backend
@@ -1,35 +1,11 @@
-FROM python:3.14-slim AS builder
-
+FROM python:3.13-slim
 WORKDIR /app
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
 
 COPY todo-backend/requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
-
-FROM python:3.14-slim
-
-WORKDIR /app
-
-RUN useradd --create-home --shell /bin/bash appuser
-
-COPY --from=builder /root/.local /home/appuser/.local
+RUN pip install -r requirements.txt
 
 COPY todo-backend/app ./app
 COPY todo-backend/run.py .
 
-ENV PATH=/home/appuser/.local/bin:$PATH
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-
-RUN chown -R appuser:appuser /app
-USER appuser
-
 EXPOSE 8000
-
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
-
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
