feat: initialize todo-backend with Express API and in-memory storage
- Added package.json for project dependencies and scripts
- Implemented main server file (src/index.js) with Express and CORS
- Created routes for tasks (src/routes/tasks.js) and tags (src/routes/tags.js)
- Added statistics route (src/routes/stats.js) for task contributions and overall stats
- Implemented in-memory storage (src/storage.js) for tasks and tags management
- Added error handling and health check endpoint

--- a/GCE/todo-backend/Dockerfile
+++ b/GCE/todo-backend/Dockerfile
@@ -1,32 +1,12 @@
-FROM python:3.14 AS builder
+FROM node:24-alpine
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y gcc g++
+COPY package.json ./
 
-COPY requirements.txt .
+RUN npm install
 
-RUN pip install --no-cache-dir -r requirements.txt
+COPY ./src .
 
-COPY . .
+CMD ["npm", "start"]
 
-
-FROM python:3.14-slim
-
-WORKDIR /app
-
-RUN apt-get update && apt-get upgrade -y
-
-COPY --from=builder /usr/local/lib/python3.14/site-packages /usr/local/lib/python3.14/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
-COPY --from=builder /app /app
-
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-RUN groupadd -r nonroot && useradd -r -g nonroot nonroot
-USER nonroot
-
-EXPOSE 8000
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
