--- a/GCE/todo-dashboard/nginx.conf
+++ b/GCE/todo-dashboard/nginx.conf
@@ -1,28 +1,12 @@
 server {
     listen 80;
-    server_name localhost;
-
-    root /usr/share/nginx/html;
-    index index.html;
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
-        proxy_pass http://backend:8000/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|svg|ico|woff2?)$ {
-        expires 30d;
-        add_header Cache-Control "public, immutable";
+        proxy_pass http://backend:8000;
     }
 }
